--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <main>
       <!-- Banner -->
       <section class="banner">
-        <h2><i>Brillamos contigo cada día </i></h2>
+        <h2>
+          <i>Brillamos contigo cada día </i>
+        </h2>
       </section>
       <!-- Gallery -->
       <section class="gallery">
@@ -94,6 +96,19 @@
             <p>Diamantes collection</p>
           </a>
         </article>
+      </section>
+      <section class="promo">
+        <h3>Descubre la belleza de los diamantes</h3>
+        <div class="container-promo">
+          <article>
+            <img src="img/index/03.jpg" alt="" />
+            <p>Pulso diamantes</p>
+          </article>
+          <article>
+            <img src="img/index/02.jpg" alt="" />
+            <p>Collar diamantes</p>
+          </article>
+        </div>
       </section>
     </main>
     <footer>
